package com.coding.challenge.app.domain;

import lombok.Data;

import java.util.List;

@Data
public class VehicleInfo {
   private List<Vehicle> vehicles;

}
